# django-palette

./: .gitignore  ARCHITECTURE.rst  Makefile  README.rst  TODO.rst  boussole.json  package-lock.json  package.json  setup.cfg  webpack.config.js
django_palette/: __init__.py  choices.py  dumps.py  settings.py  urls.py
django_palette/colors/: __init__.py  dumper.py  finder.py  naming.py  registry.py
django_palette/colors/datas/: crayola.json  default.json  dulux.json  names.json  xkcd.json
django_palette/forms/: dump.py  palette.py  source.py
django_palette/templates/django_palette/: base.html  index.html
django_palette/views/: __init__.py  dump.py  palette.py  source.py
frontend/src/: app.js  loggers.js
frontend/src/components/: DumpForm.vue  FormatsForm.vue  Main.vue  NameChoiceInput.vue  Output.vue  PaletteForm.vue  PaletteFormset.vue  SourceForm.vue
frontend/src/store/: index.js
frontend/src/utils/: forms.js
sandbox/: urls.py
sandbox/prototypes/: urls.py
sandbox/settings/: __init__.py  base.py  demo.py  tests.py
sandbox/styleguide/: urls.py  views.py
sandbox/templates/: skeleton.html
sass/Sveetoy/: sveetoy.scss
sass/foundation/: foundation.scss
sass/foundation6/: foundation.scss
sass/scss/: _colors.scss  _settings.scss  app.scss  styleguide_manifest.scss
tests/: __init__.py  conftest.py
tests/010_colors/: 001_base.py  002_finder.py  003_registry.py  004_naming.py  005_name_validation.py  010_command.py
tests/020_dumps/: 001_build_dump.py
tests/100_forms/: 001_source.py  002_palette.py  003_dump.py
tests/200_views/: 001_index.py  002_source_post.py  003_palette_post.py  004_dump_post.py
(+57 files in other folders)
