;;
;; Richie package
;;
[metadata]
name = django-palette
version = 0.1.0
description = A Django+Vue.js app to build a palette with named color
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-palette
license = MIT
keywords = Django, Color, Palette
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    colour==0.1.5
    Django>=2.0,<2.1
    whitenoise>=4.0,<5.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8==3.5.0
    pytest==3.7.3
    pytest-django==3.4.2

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py35-django{200,210}

[testenv]
# changedir = sandbox
# Get the right django version following the current env
deps =
    django200: Django>=2.0,<2.1
    django210: Django>=2.1,<2.2

commands =
    pip install -e .[dev]
    pytest -vv tests
